codex-rs/tui2/src/snapshots/codex_tui2__resume_picker__tests__resume_picker_screen_filtered@windows.snap
---
source: tui2/src/resume_picker.rs
expression: snapshot
---
Resume a previous session
Type to search
Filtering to current directory: /tmp/project · Use --all to show sessions from a
  Updated  Branch  Conversation
No sessions yet



enter to resume     esc to start new     ctrl + c to quit
