codex-rs/tui2/src/snapshots/codex_tui2__resume_picker__tests__resume_picker_table.snap
---
source: tui2/src/resume_picker.rs
expression: snapshot
---
  Updated         Branch  CWD  Topics                    Conversation
  42 seconds ago  -       -    fix resume picker tim...  Fix resume picker ti...
> 35 minutes ago  -       -    investigate lazy pagi...  Investigate lazy pag...
  2 hours ago     -       -    explain the codebase      Explain the codebase
